--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -11,7 +11,7 @@ a {
 nav {
   display: flex;
   height: 11vh;
-  background: tomato;
+  background: rgb(151, 71, 255);
   justify-content: space-around;
   position: sticky;
   top: 0;
@@ -56,7 +56,7 @@ nav .burger-menu {
     display: block;
   }
   nav .navbar-links {
-    background-color: tomato;
+    background-color:  rgb(151, 71, 255);
     display: block;
     width: 50%;
     position: absolute;
